# ciro-network

./: .editorconfig  .env.example  .gitignore  .vercelignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  DEVELOPMENT_SETUP.md  ENVIRONMENT_SETUP.md  GITHUB_MIGRATION_PLAN.md  LICENSE  LICENSE-APACHE  LICENSE-BSL  LICENSE-MIT  LICENSING_STRATEGY.md  README.md  REPOSITORY_STRATEGY.md  SECURITY.md  UPDATED_TOKEN_DISTRIBUTION.md  WHY_BSL_FOR_CIRO.md  clippy.toml  contracts.json  env.example  environment.example  eslint.config.js  instructions.md  next.config.js  package-lock.json  package.json  prettier.config.js  pyrightconfig.json  requirements.txt  rustfmt.toml  starknet_grant_aplications.md  supabase-partnerships.sql  supabase-setup.sql  tailwind.config.js  vercel.json
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  documentation-improvement.md  feature-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  project-automation.yml  release-drafter.yml  release-notes.yml
.husky/: pre-commit
.next/: app-build-manifest.json
.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  (+10 more)
cairo-contracts/: DEPLOYMENTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_STATUS.md  FINAL_MAINNET_STATUS.md  INTEGRATION_TESTING.md  INTEGRATION_TESTING_SUMMARY.md  MAINNET_PREPARATION_SUMMARY.md  README.md  Scarb.toml  TESTNET_LAUNCH_RECOMMENDATION.md  TESTNET_READY_STATUS.md  TESTNET_SETUP_GUIDE.md  core_deployment_20250803_151955.json  deployment_20250803_151433.json  deployment_20250803_204530.json  fresh_deployer_key  reputation_manager_deployment.json  run_integration_tests.sh  temp_account.json  testnet_account.json  testnet_contracts.json  testnet_declarations.json  verify_mainnet_readiness.sh
ciro-network-website/: README.md  middleware.ts  next.config.js  package-lock.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
docs/: CDC_Pool_Documentation.md  CIRO_Institutional_Readiness_Checklist.md  CIRO_Multichain_Strategy.md  CIRO_Token_Tokenomics.md  CIRO_Use_of_Proceeds.md  CODE_QUALITY.md  CONTENT_STRATEGY.md  MATH_SETUP.md  P2P_ARCHITECTURE.md  README.md  Research.md  SIMULATOR_SETUP.md  TOken_Improvement_Suggestions.md  book.toml  development-setup.md  instructions.md  package.json  vercel.json
rust-node/: COORDINATOR_ENHANCED.md  Cargo.toml  FINAL_SUMMARY.md  FIX_PLAN.md  README.md  README_WORKING.md  STATUS.md  TEST_PLAN.md  demo_p2p.sh  demo_script.sh  test_coordinator.sh
rust-node/docs/: indexer_deployment_guide.md  network_health_reputation_system.md
rust-node/migrations/: 001_initial_schema.sql
rust-node/src/: coordinator_main.rs  lib.rs  types.rs
rust-node/src/ai/: execution.rs  frameworks.rs  mod.rs  model_registry.rs
rust-node/src/blockchain/: client.rs  contracts.rs  events.rs  mod.rs  types.rs
rust-node/src/compute/: executor.rs  mod.rs
rust-node/src/coordinator/: blockchain_integration.rs  config.rs  job_processor.rs  kafka.rs  metrics.rs  mod.rs  network_coordinator.rs  simple_coordinator.rs  worker_manager.rs
rust-node/src/network/: discovery.rs  gossip.rs  health_reputation.rs  health_reputation_integration_test.rs  job_distribution.rs  mod.rs  p2p.rs  result_collection.rs
rust-node/src/node/: coordinator.rs  health.rs  mod.rs  worker.rs
rust-node/src/storage/: config.rs  database_macro.rs.bak  database_simple.rs  mod.rs  models.rs
rust-node/src/utils/: mod.rs
rust-node/templates/: dashboard.html
rust-node/tests/: blockchain_integration_test.rs  database_test.rs  job_distribution_test.rs  p2p_integration_test.rs  real_blockchain_integration_test.rs  result_collection_test.rs
scripts/: backup_artifacts.sh  verify_contracts.sh
src/: __init__.py  test_events.cairo  tokenomics_engine.py
tauri-app/: README.md
tests/: test_core_mechanics.py
tokenomics-engine/: TODO.md
(+795 files in other folders)
