[workspace]
members = [
    "rust-node",
    "backend",
    "shared/ciro-types",
    "shared/ciro-crypto",
    "shared/ciro-network",
    "shared/ciro-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CIRO Labs <contact@ciro.ai>"]
license = "MIT"
repository = "https://github.com/Ciro-AI-Labs/ciro-network"
homepage = "https://ciro.ai"
description = "Decentralized compute layer for Starknet"
keywords = ["starknet", "ai", "depin", "compute", "blockchain"]
categories = ["cryptography", "network-programming", "mathematics"]
rust-version = "1.70"

[workspace.dependencies]
# ===== Core Dependencies =====
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"

# ===== Async & Networking =====
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.10"
prost = "0.12"
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "identify"] }

# ===== Cryptography =====
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = "2.0"
secp256k1 = "0.28"

# ===== Database =====
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# ===== Starknet =====
starknet = "0.7"
starknet-accounts = "0.7"
starknet-providers = "0.7"
starknet-contract = "0.7"
starknet-core = "0.7"
starknet-crypto = "0.6"

# ===== GPU Compute =====
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tch = "0.13"

# ===== Utilities =====
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
lazy_static = "1.4"

# ===== Development =====
mockall = "0.12"
criterion = "0.5"
proptest = "1.4"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Allow some pedantic lints that are overly strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow" 