[package]
name = "ciro-worker"
version = "0.1.0"
edition = "2021"
authors = ["CIRO Labs <contact@ciro.ai>"]
license = "MIT"
repository = "https://github.com/Ciro-AI-Labs/ciro-network"
homepage = "https://ciro.ai"
description = "CIRO Network Worker and Coordinator Node"
keywords = ["starknet", "ai", "depin", "compute", "blockchain"]
categories = ["cryptography", "network-programming", "mathematics"]
rust-version = "1.70"

[dependencies]
# ===== Core Dependencies =====
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"

# ===== Async & Networking =====
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ===== Cryptography =====
rand = "0.8"
sha2 = "0.10"

# ===== Database =====
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# ===== Starknet =====
starknet = "0.7"
starknet-accounts = "0.7"
starknet-providers = "0.7"
starknet-contract = "0.7"
starknet-core = "0.7"
starknet-crypto = "0.6"

# ===== Utilities =====
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
lazy_static = "1.4"
url = "2.4"

# ===== Job Processing =====
rayon = "1.8"
crossbeam = "0.8"

# ===== P2P Networking =====
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "websocket", 
    "dns",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "request-response",
    "json",
    "identify",
    "ping",
    "mdns",
    "floodsub",
    "macros",
    "serde"
] }
multiaddr = "0.18"
libp2p-identity = "0.1"
void = "1.0"
async-trait = "0.1"
bincode = "1.3"
md5 = "0.8.0"
toml = "0.9.2"
rdkafka = "0.37.0"

# ===== Docker Integration (Optional) =====
# bollard = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ciro-worker"
path = "src/main.rs"

# TODO: Re-enable coordinator binary when import issues are resolved
# [[bin]]
# name = "ciro-coordinator"
# path = "src/coordinator_main.rs"
